<resources>
    <string name="app_name">TheMovie</string>
    <string name="release_date">Release date</string>
    <string name="language">Language</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="movie_name">Movie name</string>
    <string name="search_hint">Input movie name</string>
    <string name="action_search">Search</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now playing</string>
    <string name="action_change_language">Change language</string>
    <string name="rating_value" formatted="false" translatable="false">%.2f (%d)</string>

    <string name="title_search">Search movie</string>

    <string name="log_receive_response" formatted="false" translatable="false">Received response for %s in %.1fms%n%s</string>
    <string name="log_sending_response" formatted="false" translatable="false">Sending request %s on %s%n%s</string>
    <string name="log_encoded_path" formatted="false" translatable="false">Encoded path %s</string>
    <string name="my_favorites">My favorites</string>
    <string name="no_data">No data</string>
    <string name="example">Example</string>
    <string name="turn_off_notif">Turn off notification</string>
    <string name="turn_on_notif">Turn on notification</string>
    <string name="notif_release_today" formatted="false">%s is released today!</string>
    <string name="open_app">is missing you</string>
</resources>
