<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageMoviePoster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp">

        <TextView
            android:id="@+id/textMovieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/movie_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textMovieOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/overview"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textMovieReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/release_date"
            android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>